# OCInferno

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
ocinferno/: __init__.py  __main__.py
ocinferno/cli/: main.py  module_actions.py  workspace_instructions.py
ocinferno/core/: api_logger.py  config.py  console.py  contracts.py  db.py  http_policy.py  session.py
ocinferno/mappings/: __init__.py  database_info.yaml  module-mappings.json
opengraph_examples/: example_input.json
tests/: README.md  __init__.py  conftest.py
tests/enum_modules/: __init__.py  harness.py  test_enum_all.py  test_enum_apigateway.py  test_enum_artifactregistry.py  test_enum_blockchain.py  test_enum_cloudguard.py  test_enum_comp.py  test_enum_config_check.py  test_enum_container_instances.py  test_enum_containerregistry.py  test_enum_core_block_storage.py  test_enum_core_compute.py  test_enum_core_network.py  test_enum_databases.py  test_enum_dataflow.py  test_enum_datascience.py  test_enum_desktops.py  test_enum_devops.py  test_enum_dns.py  test_enum_email.py  test_enum_filestorage.py  test_enum_functions.py  test_enum_identity.py  test_enum_iot.py  test_enum_kubernetes.py  test_enum_logs.py  test_enum_managedkafka.py  test_enum_network_load_balancers.py  test_enum_networkfirewall.py  test_enum_notifications.py  test_enum_objectstorage.py  test_enum_oracle_cloud_hound_data.py  test_enum_resource_schedules.py  test_enum_resourcemanager.py  test_enum_tagging.py  test_enum_vault.py
(+894 files in other folders)
